# openapi/openapi.yaml
@@ -105,6 +105,12 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/User'
+        '422':
+          description: Validation error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
   /users/{id}:
     patch:
       summary: Update user by ID
@@ -130,6 +136,12 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/User'
+        '422':
+          description: Validation error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
     delete:
       summary: Delete user by ID
       tags:
@@ -143,6 +155,26 @@ paths:
       responses:
         '204':
           description: User deleted successfully
+  /users/{id}/tasks:
+    get:
+      summary: Get tasks for user
+      tags:
+        - tasks
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: A list of tasks for the user
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Task'
 
 components:
   schemas:
@@ -155,6 +187,8 @@ components:
           type: string
         is_done:
           type: boolean
+        user_id:
+          type: string
     User:
       type: object
       properties:
@@ -163,4 +197,9 @@ components:
         email:
           type: string
         password:
+          type: string
+    Error:
+      type: object
+      properties:
+        error:
           type: string
